package Updatable.Biglietto;

public abstract class BigliettoAbstract implements BigliettoInterf{

    @Override
    public int hashCode() {
        return super.hashCode();
    }//hashCode

    @Override
    public boolean equals(Object obj) {
        return super.equals(obj);
    }//equals

    @Override
    public String toString() {
        return super.toString();
    }//toString

}//BigliettoAbstract

